# RayTracing

./: Array3.h  CMakeLists.txt  HitObject.cpp  HitObject.h  Material.cpp  Material.h  Math.cpp  Math.h  Render.cpp  Render.h  main.cpp
Array3/: Array3.h  Color.h  Point.h  Vec3.h
Hittable/: HitObject.h  Sphere.cpp  Sphere.h
Image/: Bitmap.cpp  Bitmap.h  CMakeLists.txt
Material/: Material.h
Render/: Bitmap.cpp  Bitmap.h  Camera.cpp  Camera.h  Ray.h
math/: Array3.h  CMakeLists.txt  Color.h  Point.h  Vec3.h
